feat(nixos) use shortcuts for terminal firefox and code

--- a/modules/home/sway/config
+++ b/modules/home/sway/config
@@ -233,12 +233,12 @@ bar {
 # Startup
 assign [app_id="firefox"] workspace number 1
 assign [app_id="kitty"] workspace number 2
-assign [app_id=null] workspace number 3
+assign [app_id="org.kde.kate"] workspace number 3
 
 # Bind commands to quickly switch to the app
 bindsym $mod+$mod2+f exec sh ~/.config/sway/launch/firefox
 bindsym $mod+$mod2+t exec sh ~/.config/sway/launch/kitty
-bindsym $mod+$mod2+c exec sh ~/bin/launch/pycharm
+bindsym $mod+$mod2+c exec sh ~/.config/sway/launch/kate
 include /etc/sway/config.d/*
 
 #========================#
