feat(waybar)add new theme

--- a/modules/home/kitty/kitty.conf
+++ b/modules/home/kitty/kitty.conf
@@ -18,6 +18,7 @@ map kitty_mod+,     move_tab_backward
 map cmd+right  next_window
 map cmd+left  previous_window
 
+map ctrl+shift+t new_tab
 
 font_size 13.0
 tab_bar_style powerline
