--- a/modules/home/kitty/kitty.conf
+++ b/modules/home/kitty/kitty.conf
@@ -9,6 +9,7 @@ map ctrl+up resize_window taller
 map ctrl+down resize_window shorter 3
 map ctrl+home resize_window reset
 map kitty_mod+y launch --type=overlay --stdin-source=@screen_scrollback /usr/local/bin/fzf --no-sort --no-mouse --exact -i
+map ctrl+f launch --type=overlay --stdin-source=@screen_scrollback /bin/sh -c "/usr/local/bin/fzf --no-sort --no-mouse --exact -i --tac | kitty +kitten clipboard"
 tab_activity_symbol        ⁂
 
 kitty_mod cmd+option
