--- a/modules/home/kitty/kitty.conf
+++ b/modules/home/kitty/kitty.conf
@@ -23,6 +23,7 @@ map ctrl+shift+t new_tab
 
 font_size 12.0
 tab_bar_style powerline
+tab_bar_edge top 
 term xterm-256color
 #: Font size (in pts)
 
