fix(zellij)update config to include layouts

--- a/modules/home/kitty/kitty.conf
+++ b/modules/home/kitty/kitty.conf
@@ -92,10 +92,8 @@ mark1_background #ff5555
 # Splits/Windows
 active_border_color #f8f8f2
 inactive_border_color #6272a4
-# ========== DRACULA THEME ==========
 
-
-
-# Fig Kitty Integration: Enabled
-
-# End of Fig Kitty Integration
+# unbind muscle memory
+map cmd+t none 
+map ctrl+shift+t none
+map cmd+opt+enter none
