--- a/modules/home/tmux/tmux.conf
+++ b/modules/home/tmux/tmux.conf
@@ -1,8 +1,17 @@
 # Allow mouse interaction
 set-option -g mouse on
+set-window-option -g mode-keys vi
 
 bind C-e send-keys 'vi .' Enter
 bind C-r send-keys 'kubie ctx' Enter
+
+set -g prefix C-a
+unbind C-b
+bind-key C-a send-prefix
+
+unbind r
+bind r source-file ~/.config/tmux/tmux.conf
+
 
 # enable true colors
 set-option -sa terminal-overrides ',*:RGB'
@@ -54,7 +63,7 @@ bind n split-window -h -c "#{pane_current_path}"
 bind y split-window -v -c "#{pane_current_path}"
 
 #set -g set-clipboard external
-#bind -r C-v run 'xclip -o | tmux load-buffer - ; tmux paste-buffer'
+bind -r C-v run 'xclip -o | tmux load-buffer - ; tmux paste-buffer'
 
 # TokyoNight colors for Tmux
 set -g mode-style "fg=#7aa2f7,bg=#3b4261"
@@ -84,9 +93,28 @@ setw -g window-status-separator ""
 setw -g window-status-style "NONE,fg=#a9b1d6,bg=#16161e"
 setw -g window-status-format "#[fg=#16161e,bg=#16161e,nobold,nounderscore,noitalics]#[default] #I #W #F #[fg=#16161e,bg=#16161e,nobold,nounderscore,noitalics]"
 setw -g window-status-current-format "#[fg=#16161e,bg=#3b4261,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#3b4261,bold] #I #W #F #[fg=#3b4261,bg=#16161e,nobold,nounderscore,noitalics]"
-
+#
 # Move around panes with ALT + arrow keys.
 bind-key -n M-Up select-pane -U
 bind-key -n M-Left select-pane -L
 bind-key -n M-Down select-pane -D
 bind-key -n M-Right select-pane -R
+bind-key -n C-a next-window
+
+
+ # List of plugins
+ set -g @tpm_plugins '          \
+   tmux-plugins/tpm             \
+   christoomey/vim-tmux-navigator \
+ '
+
+#set -g @plugin 'fabioluciano/tmux-tokyo-night'
+
+### Tokyo Night Theme configuration
+#set -g @theme_variation 'moon'
+#set -g @theme_left_separator ''
+#set -g @theme_right_separator ''
+#set -g @theme_plugins 'datetime,weather,playerctl,yay'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
