fix(tmux) add floating windows

--- a/modules/home/tmux/tmux.conf
+++ b/modules/home/tmux/tmux.conf
@@ -102,6 +102,12 @@ bind-key -n M-Right select-pane -R
 bind-key -n C-a next-window
 
 
+# bind -n M-x display-popup -E "ta ~/git"
+# bind -n M-z display-popup -E "tmux new-session -A -s scratch"
+
+
+bind-key -n 'M-x' run-shell -b "${HOME}/.local/bin/tmux-float.sh float"
+
  # List of plugins
  set -g @tpm_plugins '          \
    tmux-plugins/tpm             \
