fix: config wezterm

--- a/modules/home/tmux/tmux.conf
+++ b/modules/home/tmux/tmux.conf
@@ -5,6 +5,10 @@ set-window-option -g mode-keys vi
 bind C-e send-keys 'vi .' Enter
 bind C-r send-keys 'kubie ctx' Enter
 
+# Start windows and panes at 1, not 0
+set -g base-index 1
+setw -g pane-base-index 1
+
 set -g prefix C-a
 unbind C-b
 bind-key C-a send-prefix
@@ -35,7 +39,7 @@ set-option -g set-titles on
 set-option -g set-titles-string '#T - #W'
 
 # all input in all panes synchronizes
-bind p set-window-option synchronize-panes
+# bind p set-window-option synchronize-panes
 
 # only useful if not using NixOS
 #bind r source-file ~/.tmux.conf
@@ -99,7 +103,6 @@ bind-key -n M-Up select-pane -U
 bind-key -n M-Left select-pane -L
 bind-key -n M-Down select-pane -D
 bind-key -n M-Right select-pane -R
-bind-key -n C-a next-window
 
 
 # bind -n M-x display-popup -E "ta ~/git"
