--- a/modules/home/tmux/tmux.conf
+++ b/modules/home/tmux/tmux.conf
@@ -2,8 +2,10 @@
 set-option -g mouse on
 set-window-option -g mode-keys vi
 
-bind C-e send-keys 'vi .' Enter
-bind C-r send-keys 'kubie ctx' Enter
+bind C-v send-keys 'vi .' Enter
+bind C-k send-keys 'kubie ctx' Enter
+
+set-option -g default-shell /Users/lefteris/.nix-profile/bin/fish
 
 # Start windows and panes at 1, not 0
 set -g base-index 1
@@ -38,17 +40,26 @@ set -g visual-activity off
 set-option -g set-titles on
 set-option -g set-titles-string '#T - #W'
 
-# all input in all panes synchronizes
-# bind p set-window-option synchronize-panes
-
-# only useful if not using NixOS
-#bind r source-file ~/.tmux.conf
-
 # pane movement shortcuts
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
+# bind h select-pane -L
+# bind j select-pane -D
+# bind k select-pane -U
+# bind l select-pane -R
+#
+## NAVIGATION: ############################
+
+# Switch panes 
+# Usage: "ALT+arrow keys" (without prefix key)
+# from https://gist.github.com/spicycode
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
+ 
+# Switch windows 
+# usage: "SHIFT+arrow" (without prefix key)
+bind -n S-Left  previous-window
+bind -n S-Right next-window
 
 # Resize pane shortcuts
 bind -r C-h select-window -t :-
@@ -97,13 +108,6 @@ setw -g window-status-separator ""
 setw -g window-status-style "NONE,fg=#a9b1d6,bg=#16161e"
 setw -g window-status-format "#[fg=#16161e,bg=#16161e,nobold,nounderscore,noitalics]#[default] #I #W #F #[fg=#16161e,bg=#16161e,nobold,nounderscore,noitalics]"
 setw -g window-status-current-format "#[fg=#16161e,bg=#3b4261,nobold,nounderscore,noitalics]#[fg=#7aa2f7,bg=#3b4261,bold] #I #W #F #[fg=#3b4261,bg=#16161e,nobold,nounderscore,noitalics]"
-#
-# Move around panes with ALT + arrow keys.
-bind-key -n M-Up select-pane -U
-bind-key -n M-Left select-pane -L
-bind-key -n M-Down select-pane -D
-bind-key -n M-Right select-pane -R
-
 
 # bind -n M-x display-popup -E "ta ~/git"
 # bind -n M-z display-popup -E "tmux new-session -A -s scratch"
