update skhrc / yabai and add crane

--- a/modules/home/tmux/tmux.conf
+++ b/modules/home/tmux/tmux.conf
@@ -19,6 +19,7 @@ unbind r
 bind r source-file ~/.config/tmux/tmux.conf
 
 
+
 # enable true colors
 set-option -sa terminal-overrides ',*:RGB'
 set-option -ga terminal-overrides ',*:Tc'
@@ -60,6 +61,11 @@ bind -n M-Down select-pane -D
 # usage: "SHIFT+arrow" (without prefix key)
 bind -n S-Left  previous-window
 bind -n S-Right next-window
+
+#new pane
+bind-key -n C-t new-window
+# kill pane
+bind-key -n C-x kill-pane
 
 # Resize pane shortcuts
 bind -r C-h select-window -t :-
