--- a/modules/home/aerospace/aerospace.toml
+++ b/modules/home/aerospace/aerospace.toml
@@ -113,6 +113,7 @@ alt-8 = 'workspace 8'
 alt-9 = 'workspace 9'
 alt-b = 'workspace B'
 alt-c = 'workspace C'
+alt-d = 'workspace D'
 alt-e = 'workspace E'
 alt-f = 'workspace F'
 alt-m = 'workspace M'
@@ -135,6 +136,7 @@ alt-shift-8 = 'move-node-to-workspace 8'
 alt-shift-9 = 'move-node-to-workspace 9'
 alt-shift-b = 'move-node-to-workspace B'
 alt-shift-c = 'move-node-to-workspace C'
+alt-shift-d = 'move-node-to-workspace D'
 alt-shift-e = 'move-node-to-workspace E'
 alt-shift-f = 'move-node-to-workspace F'
 alt-shift-m = 'move-node-to-workspace M'
@@ -212,3 +214,8 @@ run = "move-node-to-workspace C"
 [[on-window-detected]]
 if.app-id = 'dev.zed.Zed'
 run = "move-node-to-workspace Z"
+
+[[on-window-detected]]
+if.app-id = 'com.jgraph.drawio.desktop'
+run = "move-node-to-workspace D"
+
