--- a/modules/home/aerospace/aerospace.toml
+++ b/modules/home/aerospace/aerospace.toml
@@ -90,15 +90,15 @@ alt-comma = 'layout accordion horizontal vertical'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#focus
 alt-h = 'focus left'
-alt-j = 'focus down'
-alt-k = 'focus up'
+#alt-j = 'focus down'
+#alt-k = 'focus up'
 alt-l = 'focus right'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#move
-alt-shift-h = 'move left'
-alt-shift-j = 'move down'
-alt-shift-k = 'move up'
-alt-shift-l = 'move right'
+#alt-shift-h = 'move left'
+#alt-shift-j = 'move down'
+#alt-shift-k = 'move up'
+#alt-shift-l = 'move right'
 
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#workspace
@@ -116,6 +116,7 @@ alt-c = 'workspace C'
 alt-d = 'workspace D'
 alt-e = 'workspace E'
 alt-f = 'workspace F'
+alt-k = 'workspace K'
 alt-m = 'workspace M'
 alt-n = 'workspace N'
 alt-p = 'workspace P'
@@ -139,6 +140,7 @@ alt-shift-c = 'move-node-to-workspace C'
 alt-shift-d = 'move-node-to-workspace D'
 alt-shift-e = 'move-node-to-workspace E'
 alt-shift-f = 'move-node-to-workspace F'
+alt-shift-k = 'move-node-to-workspace K'
 alt-shift-m = 'move-node-to-workspace M'
 alt-shift-n = 'move-node-to-workspace N'
 alt-shift-p = 'move-node-to-workspace P'
@@ -191,6 +193,8 @@ alt-shift-j = ['join-with down', 'mode main']
 alt-shift-k = ['join-with up', 'mode main']
 alt-shift-l = ['join-with right', 'mode main']
 
+# use  aerospace list-apps to get the app-id
+
 [[on-window-detected]]
 if.app-id = 'com.github.wez.wezterm'
 run = "move-node-to-workspace T"
@@ -219,3 +223,6 @@ run = "move-node-to-workspace Z"
 if.app-id = 'com.jgraph.drawio.desktop'
 run = "move-node-to-workspace D"
 
+[[on-window-detected]]
+if.app-id = 'net.kovidgoyal.kitty'
+run = "move-node-to-workspace K"
