feat: enable aws-vault and some minor changes in kitty config

--- a/modules/home/kitty/kitty.conf
+++ b/modules/home/kitty/kitty.conf
@@ -1,4 +1,4 @@
-font_family      Iosevka Nerd Font Mono
+font_family      JetBrains Mono
 scrollback_lines 10000
 copy_on_select yes
 cursor_stop_blinking_after 3.0
@@ -14,6 +14,12 @@ tab_activity_symbol        ⁂
 
 kitty_mod cmd+option
 enabled_layouts tall,stack,fat
+
+# Set the layout for the current tab
+layout tall
+# Set the working directory for windows in the current tab
+cd /tmp
+
 map kitty_mod+.     move_tab_forward
 map kitty_mod+,     move_tab_backward
 map cmd+right  next_window
@@ -31,7 +37,11 @@ enable_audio_bell no
 bell_on_tab no
 
 #background_opacity 0.9
-hide_window_decorations titlebar-only
+# hide_window_decorations titlebar-only
+macos_show_window_title_in none
+macos_titlebar_color #272727
+macos_menubar_title_max_length 0
+
 
 # ========== DRACULA THEME ==========
 # https://draculatheme.com/kitty
