--- a/modules/home/kitty/kitty.conf
+++ b/modules/home/kitty/kitty.conf
@@ -14,11 +14,11 @@ tab_activity_symbol        ⁂
 
 kitty_mod cmd+option
 enabled_layouts tall,stack,fat
+shell /Users/lefteris/.nix-profile/bin/fish
 
 # Set the layout for the current tab
 layout tall
-# Set the working directory for windows in the current tab
-cd /tmp
+startup_session session.conf
 
 map kitty_mod+.     move_tab_forward
 map kitty_mod+,     move_tab_backward
