--- a/modules/home/kitty/kitty.conf
+++ b/modules/home/kitty/kitty.conf
@@ -1,4 +1,4 @@
-font_family      JetBrains Mono
+font_family Hack Nerd Font Mono 
 scrollback_lines 10000
 copy_on_select yes
 cursor_stop_blinking_after 3.0
