--- a/modules/home/kitty/kitty.conf
+++ b/modules/home/kitty/kitty.conf
@@ -1,4 +1,4 @@
-font_family Hack Nerd Font Mono 
+font_family JetBrainsMono Nerd Font Mono
 scrollback_lines 10000
 copy_on_select yes
 cursor_stop_blinking_after 3.0
@@ -16,8 +16,6 @@ kitty_mod cmd+option
 enabled_layouts tall,stack,fat
 shell /Users/lefteris/.nix-profile/bin/fish
 
-# Set the layout for the current tab
-layout tall
 startup_session session.conf
 
 map kitty_mod+.     move_tab_forward
