--- a/modules/home/tmux/tmux.conf
+++ b/modules/home/tmux/tmux.conf
@@ -118,22 +118,7 @@ setw -g window-status-current-format "#[fg=#16161e,bg=#3b4261,nobold,nounderscor
 # bind -n M-x display-popup -E "ta ~/git"
 # bind -n M-z display-popup -E "tmux new-session -A -s scratch"
 
+set -g @fingers-key K
 
 bind-key -n 'M-x' run-shell -b "${HOME}/.local/bin/tmux-float.sh float"
 
- # List of plugins
- set -g @tpm_plugins '          \
-   tmux-plugins/tpm             \
-   christoomey/vim-tmux-navigator \
- '
-
-#set -g @plugin 'fabioluciano/tmux-tokyo-night'
-
-### Tokyo Night Theme configuration
-#set -g @theme_variation 'moon'
-#set -g @theme_left_separator ''
-#set -g @theme_right_separator ''
-#set -g @theme_plugins 'datetime,weather,playerctl,yay'
-
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
