do not install tmux and install chezmoi

--- a/modules/home/tmux/tmux.conf
+++ b/modules/home/tmux/tmux.conf
@@ -118,7 +118,16 @@ setw -g window-status-current-format "#[fg=#16161e,bg=#3b4261,nobold,nounderscor
 # bind -n M-x display-popup -E "ta ~/git"
 # bind -n M-z display-popup -E "tmux new-session -A -s scratch"
 
-set -g @fingers-key K
+#set -g @fingers-key K
 
 bind-key -n 'M-x' run-shell -b "${HOME}/.local/bin/tmux-float.sh float"
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'Morantron/tmux-fingers'
+
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
 
